--- a/GarageSale/Base.lproj/Main.storyboard
+++ b/GarageSale/Base.lproj/Main.storyboard
@@ -151,44 +151,60 @@
                                             <rect key="frame" x="0.0" y="0.0" width="235" height="494"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3KW-08-JGl">
-                                                    <rect key="frame" x="96" y="455" width="42" height="21"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3KW-08-JGl" customClass="PaddedLabel" customModule="GarageSale" customModuleProvider="target">
+                                                    <rect key="frame" x="92" y="449.5" width="52.5" height="26.5"/>
                                                     <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="22" id="UZF-Fz-nmu"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                                     <color key="textColor" red="0.0014362927319999999" green="0.50582963199999997" blue="0.0022285389480000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="exF-d1-4BB">
-                                                    <rect key="frame" x="96" y="18" width="42" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <rect key="frame" x="92" y="18" width="52.5" height="26.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="76G-5n-pT3">
-                                                    <rect key="frame" x="0.0" y="46.5" width="235" height="400"/>
-                                                </imageView>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jbI-JN-iYN">
-                                                    <rect key="frame" x="0.0" y="47" width="235" height="400"/>
-                                                </imageView>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ipc-ma-rmx">
+                                                    <rect key="frame" x="0.0" y="52.5" width="235" height="389"/>
+                                                    <subviews>
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="76G-5n-pT3">
+                                                            <rect key="frame" x="0.0" y="0.0" width="235" height="389"/>
+                                                        </imageView>
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jbI-JN-iYN">
+                                                            <rect key="frame" x="0.0" y="0.0" width="235" height="389"/>
+                                                        </imageView>
+                                                    </subviews>
+                                                    <constraints>
+                                                        <constraint firstAttribute="trailing" secondItem="76G-5n-pT3" secondAttribute="trailing" id="9pU-03-sFs"/>
+                                                        <constraint firstItem="76G-5n-pT3" firstAttribute="top" secondItem="ipc-ma-rmx" secondAttribute="top" id="IiW-Iw-AqS"/>
+                                                        <constraint firstAttribute="bottom" secondItem="76G-5n-pT3" secondAttribute="bottom" id="aTn-AT-IIp"/>
+                                                        <constraint firstItem="76G-5n-pT3" firstAttribute="leading" secondItem="ipc-ma-rmx" secondAttribute="leading" id="hVV-uH-uyN"/>
+                                                        <constraint firstItem="jbI-JN-iYN" firstAttribute="top" secondItem="ipc-ma-rmx" secondAttribute="top" id="kVd-sP-GIj"/>
+                                                        <constraint firstAttribute="trailing" secondItem="jbI-JN-iYN" secondAttribute="trailing" id="mdv-D4-VR5"/>
+                                                        <constraint firstItem="jbI-JN-iYN" firstAttribute="leading" secondItem="ipc-ma-rmx" secondAttribute="leading" id="pXa-lg-MZf"/>
+                                                        <constraint firstAttribute="bottom" secondItem="jbI-JN-iYN" secondAttribute="bottom" id="tfF-49-Z1T"/>
+                                                    </constraints>
+                                                </view>
                                             </subviews>
                                         </view>
                                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
-                                            <constraint firstAttribute="bottomMargin" secondItem="3KW-08-JGl" secondAttribute="bottom" constant="10" id="FbW-ci-JLN"/>
-                                            <constraint firstItem="3KW-08-JGl" firstAttribute="top" secondItem="76G-5n-pT3" secondAttribute="bottom" constant="8" id="S5S-Lr-XT2"/>
-                                            <constraint firstItem="exF-d1-4BB" firstAttribute="top" secondItem="u9j-EG-IID" secondAttribute="topMargin" constant="10" id="W0G-Fx-oTd"/>
-                                            <constraint firstItem="3KW-08-JGl" firstAttribute="centerX" secondItem="u9j-EG-IID" secondAttribute="centerX" id="WHg-E2-PiY"/>
-                                            <constraint firstAttribute="trailing" secondItem="jbI-JN-iYN" secondAttribute="trailing" id="WMi-3T-JDy"/>
-                                            <constraint firstItem="76G-5n-pT3" firstAttribute="leading" secondItem="u9j-EG-IID" secondAttribute="leading" id="Wqx-iH-rXE"/>
-                                            <constraint firstItem="jbI-JN-iYN" firstAttribute="top" secondItem="exF-d1-4BB" secondAttribute="bottom" constant="8" id="Xrd-ac-Oam"/>
-                                            <constraint firstItem="3KW-08-JGl" firstAttribute="top" secondItem="jbI-JN-iYN" secondAttribute="bottom" constant="8" id="aSt-oD-Yna"/>
-                                            <constraint firstItem="jbI-JN-iYN" firstAttribute="leading" secondItem="u9j-EG-IID" secondAttribute="leading" id="cyj-U1-WZo"/>
-                                            <constraint firstAttribute="trailing" secondItem="76G-5n-pT3" secondAttribute="trailing" id="dZI-II-uzy"/>
-                                            <constraint firstItem="exF-d1-4BB" firstAttribute="centerX" secondItem="u9j-EG-IID" secondAttribute="centerX" id="eUV-dM-SDw"/>
-                                            <constraint firstItem="76G-5n-pT3" firstAttribute="top" secondItem="exF-d1-4BB" secondAttribute="bottom" constant="8" id="wkh-Xb-vpQ"/>
+                                            <constraint firstAttribute="bottomMargin" secondItem="3KW-08-JGl" secondAttribute="bottom" constant="10" id="BgC-Hw-sxj"/>
+                                            <constraint firstItem="exF-d1-4BB" firstAttribute="top" secondItem="u9j-EG-IID" secondAttribute="topMargin" constant="10" id="H7T-QH-tiP"/>
+                                            <constraint firstItem="3KW-08-JGl" firstAttribute="top" secondItem="ipc-ma-rmx" secondAttribute="bottom" constant="8" id="OGx-Ch-f6z"/>
+                                            <constraint firstItem="ipc-ma-rmx" firstAttribute="top" secondItem="exF-d1-4BB" secondAttribute="bottom" constant="8" id="Qwb-fa-b0n"/>
+                                            <constraint firstItem="3KW-08-JGl" firstAttribute="height" secondItem="exF-d1-4BB" secondAttribute="height" id="kyB-7f-DGh"/>
+                                            <constraint firstItem="ipc-ma-rmx" firstAttribute="leading" secondItem="u9j-EG-IID" secondAttribute="leading" id="pcA-eh-4pb"/>
+                                            <constraint firstAttribute="trailing" secondItem="ipc-ma-rmx" secondAttribute="trailing" id="tsv-QG-muW"/>
+                                            <constraint firstItem="exF-d1-4BB" firstAttribute="centerX" secondItem="u9j-EG-IID" secondAttribute="centerX" id="urJ-Zh-ZNz"/>
+                                            <constraint firstItem="3KW-08-JGl" firstAttribute="centerX" secondItem="u9j-EG-IID" secondAttribute="centerX" id="yfF-cI-aDO"/>
                                         </constraints>
                                         <connections>
                                             <outlet property="backgroundImageView" destination="76G-5n-pT3" id="Wdh-BR-LZu"/>
+                                            <outlet property="itemCountLabel" destination="exF-d1-4BB" id="UiE-dd-22X"/>
                                             <outlet property="itemImageView" destination="jbI-JN-iYN" id="DOm-Um-64S"/>
                                             <outlet property="itemPriceLabel" destination="3KW-08-JGl" id="RLN-za-lkL"/>
                                         </connections>
@@ -462,7 +478,7 @@
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="gVk-lz-wpw">
                                                     <rect key="frame" x="0.0" y="0.0" width="111" height="160"/>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="21U-wy-uo1">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="21U-wy-uo1" customClass="PaddedLabel" customModule="GarageSale" customModuleProvider="target">
                                                     <rect key="frame" x="34.5" y="126" width="42" height="21"/>
                                                     <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.84696061643150689" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
